--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "coffee-script": "1.6.x",
     "express": "~3.1.2",
-    "connect-gzip": "latest", 
+    "connect-gzip": "latest",
     "jade": "0.28.x",
     "stylus": "0.32.x",
     "nib": "0.9.x",
-    "request": "2.16.x"
+    "request": "2.16.x",
+    "grunt": "~0.4.1"
   }
 }
